# hexlet-hello-world

./: .bash_history  .bashrc  .gitconfig  .python_history  .viminfo  README.md  brain-calc.cast  brain-gcd.cast  demo.cast  hello.py  pyproject.toml
.cache/black/24.2.0/: Grammar3.12.3.final.0.pickle  cache.12.80.1.0.0.0.1.0.@.pickle  cache.12.88.1.0.0.0.1.0.@.pickle
.config/asciinema/: install-id
.config/uv/: uv-receipt.json
.ssh/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
hexlet-hello-world/: main.py  module.py  pyproject.toml
hexlet-hello-world/hexlet_hello_world/: example.py
hexlet_pytest/: pyproject.toml
myenv/: pyvenv.cfg
