[project]
name = "vitaliiit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["hexlet-hello-world", "hexlet-git", "python-project-49"]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ruff>=0.8.4",
]
